--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>dev.pioto</groupId>
-	<artifactId>spring-mombo-project</artifactId>
+	<artifactId>spring-mongo-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-mombo-project</name>
 	<description>Demo project for Spring Boot</description>
@@ -40,6 +40,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
