--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=spring-mombo-project
+spring.application.name=spring-mongo-project
+
+spring.data.mongodb.uri=mongodb://localhost:27017/workshop_mongo
